# logfire-examples

./: README.md
fastapi-app/: .env.example  .gitignore  README.md  database.py  main.py  models.py  pyproject.toml  schemas.py
llm-app/: .env.example  README.md  llm_utils.py  main.py  metrics.py  pyproject.toml  schemas.py
python-app/: README.md  main.py  pyproject.toml
